syntax = "proto3";

package ibc.applications.ibcswap.v1;

option go_package = "github.com/sidesnetwork/ibcswap/v4/modules/apps/101-interchain-swap/types";

import "ibc/applications/ibcswap/v1/swap.proto";
import "gogoproto/gogo.proto";

// GenesisState defines the ibc-transfer genesis state
message GenesisState {
  string              port_id      = 1 [(gogoproto.moretags) = "yaml:\"port_id\""];
  ibc.applications.ibcswap.v1.Params params = 2 [(gogoproto.nullable) = false];
}
